# nexwick

nexwick-py/: Cargo.toml  README.md  nexwick_py.pyi  pyproject.toml
nexwick-py/src/: lib.rs
nexwick-py/src/model/: mod.rs  py_compact_tree.rs  py_compact_vertex.rs  py_label_map.rs
nexwick-py/src/parsing/: mod.rs  nexus.rs
